[tool.poetry]
name = "advent"
version = "0.1.0"
description = "Advent of Code problems solved in Python"
authors = ["Valentin Baca <valbaca@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
